[workspace]
members = [
  "crates/domain",
  "crates/engine",
  "crates/research-cli"
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Maldives Genealogy Project"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
